# rust-python-lib-template

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
example/: example.py
rust_python_lib_template/: __init__.py  py.py
src/: calculator.rs  lib.rs
src/py/: calculator.rs
